new updates on projects and moved about section to homepage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link active" href="#">home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">about</a>
+                        <a class="nav-link" href="#about">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./uses.html">uses</a>
@@ -68,7 +68,7 @@
         <h1>Hi, I’m <b> Kanhu </b> — a freelance <span>Web Developer</span> based in
             Bhubaneswar, IN.
         </h1>
-        <p>I help <span> small businesses</span> grow by creating useful solutions.
+        <p>I help <span>agencies, startups & small businesses</span> grow by creating useful solutions.
         </p>
 
         <br>
@@ -76,6 +76,60 @@
         <a href="#projects"><i class="fas fa-chevron-down"></i></a>
 
     </section>
+    <section class="container text-center-section about-section" id="about">
+        <h2 class="center-heading text-center">About</h2><br>
+        <div class="row">
+            <div class="col-3"><img src="assets/images/bkanhu.png" alt="">
+
+                <a href="Resume-B-Kanhu-Charan.pdf" target="_blank" class="resume-btn">Resume</a>
+            </div>
+            <div class="col-9">
+                <p>Hello! I’m B. Kanhu Charan a self-taught Front-end web developer based in Bhubaneswar, India
+                    Specializing in developing high quality websites with simple content structure, clean design
+                    patterns and keeping great UX in mind. </p>
+
+                <p>During my undergraduate years when I was exploring more technology, and programming. I started with
+                    Front-end development as I was fascinated by the idea of making a website and sharing with the
+                    world. So I started reading more about Front-end development.</p>
+                <p>When I'm not immersed in Design or development of website, you'll find me planning imaginary trips,
+                    staring at Google Maps or Google Earth,
+                    listening to music, taking
+                    pictures of beautiful nature or the starry night.</p>
+
+
+                <!-- <div class="tech-container">
+                    <h2>
+                        Tech. I Use</h2>
+
+                    <h3>Tech</h3>
+                   
+                    <span class="col-lg-2">HTML5</span>
+                    <span class="col-lg-2">CSS3</span>
+                    <span class="col-lg-2">JS</span>
+                    <span class="col-lg-2">Sass</span>
+                    <span class="col-lg-2">Bootstrap</span>
+                    <span class="col-lg-2">React JS</span>
+                    <span class="col-lg-2">Wordpress</span>
+              
+
+                    <h3>Tools</h3>
+                    <span class="col-lg-2">Linux</span>
+                    <span class="col-lg-2">Git</span>
+
+                    <h3>Design</h3>
+                    <span class="col-lg-2">Figma</span>
+                    <span class="col-lg-2">Adobe XD</span>
+                    <span class="col-lg-2">Photoshop</span>
+                    <span class="col-lg-2">Lightroom</span>
+                </div> -->
+
+
+                <!-- <img src="" alt=""> -->
+                <!-- div.col-lg-4. -->
+            </div>
+        </div>
+    </section>
+
     <!-- <section id="services">
         <div class="service-header">
             <h2 class="center-heading text-center">What I Do</h2>
@@ -131,13 +185,37 @@
                     <a href="http://gogroceries.store/" target="_blank" class="project-card">
                         <div class="color-two">
 
-                            <h3><span>01</span> GoGroceries.store</h3>
+                            <h3><span>02</span> GoGroceries.store</h3>
 
 
                             <p>GoGroceries.store, A grocery shopping website allows users to shop grocery and daily
                                 needs
                                 from
                                 the ease of their home.</p>
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-7">
+                    <a href="https://insure-insurance-website.netlify.app/" target="_blank" class="project-card">
+                        <div class="color-three">
+
+                            <h3><span>03</span> Insure Insurance Website</h3>
+
+
+                            <p>A fictional Insurance Company's landing page.</p>
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-5">
+                    <a href="#" target="_blank" class="project-card">
+                        <div class="color-four">
+
+                            <h3><span>04</span>Hostly Web Hosting website</h3>
+
+
+                            <p>A fictional Hosting company's landing page.</p>
                         </div>
 
                     </a>
