--- a/uses.html
+++ b/uses.html
@@ -29,7 +29,7 @@
                         <a class="nav-link " href="index.html">home</a>
                     </li>
                     <li class=" nav-item">
-                        <a class="nav-link" href="./about.html">about</a>
+                        <a class="nav-link" href="index.html#about">about</a>
                     </li>
                     <li class=" nav-item">
                         <a class="nav-link active" href="./uses.html">uses</a>
