design work section add

--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
     </nav>
     <section class="container text-center-section hero-section">
         <!-- <small>About me</small> -->
-        <h1>Hi, I’m <b> Kanhu </b> — a freelance <span>Web Developer</span> based in
+        <h1>Hi, I’m <b> Kanhu </b> — a freelance <span>Web Developer who also loves to design UI.</span> Currently based
+            in
             Bhubaneswar, IN.
         </h1>
-        <p>I help <span>agencies, startups & small businesses</span> grow by creating useful solutions.
+        <p>I help <span>agencies, startups & small businesses</span> grow by creating beautiful & useful solutions.
         </p>
 
         <br>
@@ -94,13 +95,15 @@
                 <a href="Resume-B-Kanhu-Charan.pdf" target="_blank" class="resume-btn">Resume</a>
             </div>
             <div class="col-9">
-                <p>Hello! I’m B. Kanhu Charan a self-taught Front-end web developer based in Bhubaneswar, India
-                    Specializing in developing high quality websites with simple content structure, clean design
+                <p>Hello! I’m B. Kanhu Charan a self-taught Front-end web developer and UI Designer based in
+                    Bhubaneswar, India
+                    Specializing in designing amazing websites, apps and developing high quality websites with simple
+                    content structure, clean design
                     patterns and keeping great UX in mind. </p>
 
-                <p>During my undergraduate years when I was exploring more technology, and programming. I started with
+                <!-- <p>During my undergraduate years when I was exploring more technology, and programming. I started with
                     Front-end development as I was fascinated by the idea of making a website and sharing with the
-                    world. So I started reading more about Front-end development.</p>
+                    world. So I started reading more about Front-end development.</p> -->
                 <p>When I'm not immersed in Design or development of website, you'll find me planning imaginary trips,
                     staring at Google Maps or Google Earth,
                     listening to music, taking
@@ -172,7 +175,7 @@
 
 
         <div class="project-header">
-            <h2 class="center-heading text-center">Featured Projects</h2>
+            <h2 class="center-heading text-center">Featured Projects - Web Dev Work</h2>
             <!-- <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, nobis?</p> -->
         </div>
 
@@ -182,11 +185,15 @@
                     <a href="https://everydaybits.netlify.app/" target="_blank" class="project-card">
                         <div class="color-one">
 
+                            <!-- <span class="work-type-tag">UI Design & Website Development</span> -->
                             <h3><span>01</span>EveryDayBits</h3>
 
 
                             <p>EveryDayBits, A List of tools that we generally use in our day to day life to get things
                                 done online.</p>
+
+                            <span class="tech-tag">React Js</span>
+                            <span class="tech-tag">Bootstrap</span>
                         </div>
 
                     </a>
@@ -202,6 +209,10 @@
                                 needs
                                 from
                                 the ease of their home.</p>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">Sass & CSS3</span>
+                            <span class="tech-tag">Javascript</span>
+                            <span class="tech-tag">PHP</span>
                         </div>
 
                     </a>
@@ -214,6 +225,9 @@
 
 
                             <p>A fictional Insurance Company's landing page.</p>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">Sass & CSS3</span>
+                            <span class="tech-tag">Javascript</span>
                         </div>
 
                     </a>
@@ -226,6 +240,9 @@
 
 
                             <p>A fictional Hosting company's landing page.</p>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">Sass & CSS3</span>
+                            <span class="tech-tag">Javascript</span>
                         </div>
 
                     </a>
@@ -236,7 +253,110 @@
 
 
         </div>
+        <br><br>
+        <div class="project-header">
+            <h2 class="center-heading text-center">Featured Projects - UI Design Work</h2>
+            <!-- <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, nobis?</p> -->
+        </div>
 
+        <div class="project-containers">
+            <div class="row">
+                <div class="col-5">
+                    <a href="https://www.behance.net/gallery/119590603/Furniture-Shopping-App-UI-Design" target="_blank"
+                        class="project-card">
+                        <div class="color-two">
+
+                            <!-- <span class="work-type-tag">UI Design & Website Development</span> -->
+                            <h3><span>01</span>Furniture Shopping App</h3>
+
+
+                            <p>A fictional Furniture selling company's app's design.</p>
+
+
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-7">
+                    <a href="https://www.behance.net/gallery/119059097/GoGroceries-Shopping-App-UI-Design"
+                        target="_blank" class="project-card">
+                        <div class="color-one">
+
+                            <!-- <span class="work-type-tag">UI Design & Website Development</span> -->
+                            <h3><span>02</span>GoGroceries's Website Design</h3>
+
+
+                            <p>GoGroceries.store, A grocery shopping website allows users to shop grocery and daily
+                                needs from the ease of their home.</p>
+
+
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-7">
+                    <a href="https://www.behance.net/gallery/98825165/Design-Company-Portfolio" target="_blank"
+                        class="project-card">
+                        <div class="color-three">
+
+                            <h3><span>03</span> Design Company Website Landing Page</h3>
+
+
+                            <p>A landing page design for a Company who sell service related to Web Development,
+                                Photography, Digital Marketing.</p>
+
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-5">
+                    <a href="https://www.behance.net/gallery/98825747/Sign-In-Sign-Up-page-design-android"
+                        target="_blank" class="project-card">
+                        <div class="color-four">
+
+                            <h3><span>04</span> Sign In & Sign Up Page </h3>
+
+
+                            <p>Sign in & Sign up page design for an Android app.</p>
+
+                        </div>
+
+                    </a>
+                </div>
+
+                <div class="col-7">
+                    <a href="https://www.behance.net/gallery/98825459/Personal-portfolio-design" target="_blank"
+                        class="project-card">
+                        <div class="color-one">
+
+                            <h3><span>05</span> Personal portfolio design</h3>
+
+
+                            <p>A Personal portfolio design page.</p>
+
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-5">
+                    <a href="#" target="_blank" class="project-card">
+                        <div class="color-two">
+
+                            <h3><span>06</span>Hire n X</h3>
+
+
+                            <p>Desc here</p>
+
+                        </div>
+
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+
+        </div>
 
     </section>
 
